--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -349,7 +349,7 @@
                 {% for comment in tag_comments %}
                     <div class="comment" id="comment-{{ comment.id }}">
                         <div class="comment-header">
-                            <strong><a href="{{ url_for('author_profile', slug=comment.author|slugify) }}">{{ comment.author }}</a></strong>
+                            <strong><a href="{{ url_for('artist_by_name', artist_name=comment.author) }}">{{ comment.author }}</a></strong>
                             <span class="comment-date">{{ comment.timestamp.strftime('%m/%d/%Y %I:%M %p') }}</span>
                         </div>
                         <div class="comment-content">{{ comment.content }}</div>
