--- a/templates/playlist_detail.html
+++ b/templates/playlist_detail.html
@@ -346,7 +346,7 @@
                     newComment.className = 'comment';
                     newComment.innerHTML = `
                         <div class="comment-header">
-                            <strong class="comment-author"><a href="/author/${data.comment.author_slug}">${data.comment.author}</a></strong>
+                            <strong class="comment-author"><a href="/artist/${data.comment.author}">${data.comment.author}</a></strong>
                             <span class="comment-timestamp">${data.comment.timestamp}</span>
                         </div>
                         <div class="comment-content">${data.comment.content}</div>
