--- a/templates/track_detail.html
+++ b/templates/track_detail.html
@@ -135,7 +135,7 @@
           const div = document.createElement('div')
           div.className = 'comment'
           div.dataset.id = c.id
-          div.innerHTML = `<div><strong><a href="/author/${c.author_slug}">${c.author}</a></strong> <span style="color:#777; font-size:12px;">${c.timestamp}</span></div>
+          div.innerHTML = `<div><strong><a href="/artist/${c.author}">${c.author}</a></strong> <span style="color:#777; font-size:12px;">${c.timestamp}</span></div>
                            <div>${c.content}</div>
                            <button class="button like-comment">Like (${c.likes})</button>
                            <button class="button delete-comment">Delete</button>`
