--- a/templates/artist_detail.html
+++ b/templates/artist_detail.html
@@ -721,7 +721,7 @@
   <body>
     <nav class="navbar">
       <div class="nav-content">
-        <a href="{{ url_for('index') }}" class="nav-logo">breeztube</a>
+        <a href="{{ url_for('index') }}" class="nav-logo">easycore</a>
         <div class="nav-links">
           <a href="{{ url_for('index') }}">Home</a>
           <a href="{{ url_for('playlists') }}">Playlists</a>
