--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% macro render_navbar() %}
 <nav class="navbar">
     <div class="nav-content">
-        <a href="{{ url_for('index') }}" class="nav-logo">breeztube</a>
+        <a href="{{ url_for('index') }}" class="nav-logo">easycore</a>
         <div class="nav-links">
             <a href="{{ url_for('index') }}" class="nav-link">Home</a>
             <a href="{{ url_for('playlists') }}" class="nav-link">Playlists</a>
