--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ tag }} - breeztube</title>
+    <title>{{ tag }} - easycore</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
@@ -181,7 +181,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-content">
-            <a href="{{ url_for('index') }}" class="nav-logo">breeztube</a>
+            <a href="{{ url_for('index') }}" class="nav-logo">easycore</a>
             <div class="nav-links">
                 <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('video.add_video') }}">Add Video</a>
